Added for formula popup and some other changes

--- a/static/admin/assets/css/demo.css
+++ b/static/admin/assets/css/demo.css
@@ -212,3 +212,11 @@
 footer.navigation {
   margin-top: 20px;
 }
+
+.modal#confidenceLevel .modal-dialog{
+max-width:40%;
+}
+
+.modal#nervousnessLevel .modal-dialog{
+max-width:40%;
+}
