--- a/static/assets/css/details_report.css
+++ b/static/assets/css/details_report.css
@@ -161,6 +161,13 @@ h5 {
   font-size: 15px;
 }
 
+.percentage-wrapper > div{
+display:flex;}
+
+.percentage-wrapper > div span{
+margin: -3px 0px 0px 10px;
+}
+
 .modal-dialog {
   max-width: 1388px;
 }
@@ -200,6 +207,14 @@ div#chart-text {
   position: absolute;
   right: 13px;
   top: 27px;
+}
+
+.modal#confidenceLevel .modal-dialog{
+max-width:40%;
+}
+
+.modal#nervousnessLevel .modal-dialog{
+max-width:40%;
 }
 
 @media only screen and (max-width: 1024px) {
