--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -86,18 +86,23 @@ Interview Assessment {% endblock %} {% block head_styles %}
         alt="circle-image"
       />
 
+      <!-- Overall Interviewer Video Confidence -->
+      {% set OIVC = overall.overall_interviewer_confidence['CL'] %}
+      <!-- Overall Interviewer Text Confidence -->
+      {% set OITC = overall.overall_interviewer_confidence_text['CL'] %}
+
       <p class="font-weight-normal mb-3 box-p-tag">
-        Confidence Level (CL)
+        Confidence Level (CL) - <small>{{ ((OIVC + OITC) / 2) | round(2) }}%</small>
         <i class="mdi mdi-diamond mdi-24px float-right"></i>
       </p>
       <p class="percentage-font">
         <span
           >Video Analysis:
-          {{overall.overall_interviewer_confidence['CL']|round(2)}}%</span
+          {{OIVC|round(2)}}%</span
         >
         <span
           >Text Analysis:
-          {{overall.overall_interviewer_confidence_text['CL']|round(2)}}%</span
+          {{OITC|round(2)}}%</span
         >
       </p>
     </div>
@@ -120,8 +125,14 @@ Interview Assessment {% endblock %} {% block head_styles %}
             class="card-img-absolute"
             alt="circle-image"
           />
+
+          <!-- Overall Interviewer Video Nervousness -->
+          {% set OIVN = overall.overall_interviewer_confidence['NS'] %}
+          <!-- Overall Interviewer Text Nervousness -->
+          {% set OITN = overall.overall_interviewer_confidence_text['NS'] %}          
+          
           <p class="font-weight-normal mb-3 box-p-tag">
-            Nervousness Score (NS)
+            Nervousness Score (NS) - <small>{{ ((OIVN + OITN) / 2) | round(2) }}%</small>
             <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
           </p>
           <p class="percentage-font">
@@ -179,18 +190,24 @@ Interview Assessment {% endblock %} {% block head_styles %}
             class="card-img-absolute"
             alt="circle-image"
           />
+
+          <!-- Overall Candidate Video Confidence -->
+          {% set OCVC = overall.overall_candidate_confidence['CL'] %}
+          <!-- Overall Candidate Text Confidence -->
+          {% set OCTC = overall.overall_candidate_confidence_text['CL'] %}
+
           <p class="font-weight-normal mb-3 box-p-tag">
-            Confidence Level (CL)
+            Confidence Level (CL) - <small>{{ ((OCVC + OCTC) / 2) | round(2) }}%</small>
             <i class="mdi mdi-diamond mdi-24px float-right"></i>
           </p>
           <p class="percentage-font">
             <span
               >Video Analysis:
-              {{overall.overall_candidate_confidence['CL']|round(2)}}%</span
+              {{OIVC|round(2)}}%</span
             >
             <span
               >Text Analysis:
-              {{overall.overall_candidate_confidence_text['CL']|round(2)}}%</span
+              {{OITC|round(2)}}%</span
             >
           </p>
         </div>
@@ -204,18 +221,24 @@ Interview Assessment {% endblock %} {% block head_styles %}
             class="card-img-absolute"
             alt="circle-image"
           />
+
+          <!-- Overall Candidate Video Nervousness -->
+          {% set OCVN = overall.overall_candidate_confidence['NS'] %}
+          <!-- Overall Candidate Text Nervousness -->
+          {% set OCTN = overall.overall_candidate_confidence_text['NS'] %}
+
           <p class="font-weight-normal mb-3 box-p-tag">
-            Nervousness Score (NS)
+            Nervousness Score (NS) - <small>{{ ((OCVN + OCTN) / 2) | round(2) }}%</small>
             <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
           </p>
           <p class="percentage-font">
             <span
               >Video Analysis:
-              {{overall.overall_candidate_confidence['NS']|round(2)}}%</span
+              {{OCVN|round(2)}}%</span
             >
             <span
               >Text Analysis:
-              {{overall.overall_candidate_confidence_text['NS']|round(2)}}%</span
+              {{OCTN|round(2)}}%</span
             >
           </p>
         </div>
