Attendance Demo Fix

--- a/templates/admin/attendance/view_attendance.html
+++ b/templates/admin/attendance/view_attendance.html
@@ -44,6 +44,7 @@
                 <th>Employee Name</th>
                 <th>Entry Time</th>
                 <th>Exit Time</th>
+                <th>Duration</th>
               </thead>
               <tbody>
               </tbody>
