emoved NS and changes in layout with backup view-report-old file

--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -272,8 +272,10 @@
         if (response) {
           var res = JSON.parse(response);
           if (res.success) {
+            location.reload()
             $(".loader_wrapper").addClass("d-none");
             reload_candidate_list();
+            
           }
         }
       },
