--- a/templates/admin/interview_analyzer/view-report-old.html
+++ b/templates/admin/interview_analyzer/view-report-old.html
@@ -37,73 +37,152 @@ Interview Assessment {% endblock %} {% block head_styles %}
         </button></a
       >
     </div>
-    <div class="col-md-6 stretch-card grid-margin">
-        <div class="report-container">
-          <h3 class="report-title">Interviewer's Score</h3>
-          <i
-            class="fa fa-info-circle icon-css"
-            aria-hidden="true"
-            title="Check Graph"
-            data-bs-toggle="modal"
-            data-bs-target="#graphmodal"
-            data-video-report="{{candidate.overall_interviewer_video_report}}"
-            data-text-report="{{candidate.overall_interviewer_text_report}}"
-            data-audio-report="{{candidate.overall_interviewer_audio_report}}"
-          ></i>
-        </div>
-        <div class="card bg-gradient-success card-img-holder text-white">
-          <i
-              class="fa fa-info-circle icon-css"
-              aria-hidden="true"
-              title="Check Graph"
-              data-bs-toggle="modal"
-              data-bs-target="#confidenceLevel"
-              style="position: absolute; top: 0; right: 0; margin: 10px;z-index:999"
-            ></i>
-          <div class="card-body">
-
-            <img
-              src="{{ url_for('static', filename='assets/images/dashboard/circle.svg') }}"
-              class="card-img-absolute"
-              alt="circle-image"
-            />
-
-            <!-- Overall Interviewer Video Confidence -->
-            {% set OIVC = overall.overall_interviewer_confidence['CL'] %}
-            <!-- Overall Interviewer Text Confidence -->
-            {% set OITC = overall.overall_interviewer_confidence_text['CL'] %}
-
-            <p class="font-weight-normal mb-3 box-p-tag">
-              Confidence Level (CL) - <small>{{ ((OIVC + OITC) / 2) | round(2) }}%</small>
-              <i class="mdi mdi-diamond mdi-24px float-right"></i>
-            </p>
-            <p class="percentage-font">
-              <span
-                >Video Analysis:
-                {{OIVC|round(2)}}%</span
-              >
-              <span
-                >Text Analysis:
-                {{OITC|round(2)}}%</span
-              >
-            </p>
-          </div>
-        </div>
+    <div class="report-container">
+      <h3 class="report-title">Interviewer's Score</h3>
+      <i
+        class="fa fa-info-circle icon-css"
+        aria-hidden="true"
+        title="Check Graph"
+        data-bs-toggle="modal"
+        data-bs-target="#graphmodal"
+        data-video-report="{{candidate.overall_interviewer_video_report}}"
+        data-text-report="{{candidate.overall_interviewer_text_report}}"
+        data-audio-report="{{candidate.overall_interviewer_audio_report}}"
+      ></i>
     </div>
-    <div class="col-md-6 stretch-card grid-margin">
-      <div class="report-container">
-        <h3 class="report-title">Candidate's Score</h3>
-        <i
-          class="fa fa-info-circle icon-css"
-          aria-hidden="true"
-          title="Check Graph"
-          data-bs-toggle="modal"
-          data-bs-target="#graphmodal"
-          data-video-report="{{candidate.overall_candidate_video_report}}"
-          data-text-report="{{candidate.overall_candidate_text_report}}"
-          data-audio-report="{{candidate.overall_candidate_audio_report}}"
-        ></i>
+    <!-- <div class="col-md-4 stretch-card grid-margin">
+      <div class="card bg-gradient-info card-img-holder text-white">
+        <div class="card-body">
+          <img
+            src="{{ url_for('static', filename='assets/images/dashboard/circle.svg') }}"
+            class="card-img-absolute"
+            alt="circle-image"
+          />
+          <p class="font-weight-normal mb-3 box-p-tag">
+            Confidence Score (CS)
+            <i class="mdi mdi-chart-line mdi-24px float-right;"></i>
+          </p>
+          <p class="percentage-font">
+            {{overall.overall_interviewer_confidence['CS']|round(2)}}%
+          </p>
+        </div>
       </div>
+    </div> -->
+    <div class="col-md-6 stretch-card grid-margin">
+  <div class="card bg-gradient-success card-img-holder text-white">
+     <i
+        class="fa fa-info-circle icon-css"
+        aria-hidden="true"
+        title="Check Graph"
+        data-bs-toggle="modal"
+        data-bs-target="#confidenceLevel"
+        style="position: absolute; top: 0; right: 0; margin: 10px;z-index:999"
+      ></i>
+    <div class="card-body">
+
+      <img
+        src="{{ url_for('static', filename='assets/images/dashboard/circle.svg') }}"
+        class="card-img-absolute"
+        alt="circle-image"
+      />
+
+      <!-- Overall Interviewer Video Confidence -->
+      {% set OIVC = overall.overall_interviewer_confidence['CL'] %}
+      <!-- Overall Interviewer Text Confidence -->
+      {% set OITC = overall.overall_interviewer_confidence_text['CL'] %}
+
+      <p class="font-weight-normal mb-3 box-p-tag">
+        Confidence Level (CL) - <small>{{ ((OIVC + OITC) / 2) | round(2) }}%</small>
+        <i class="mdi mdi-diamond mdi-24px float-right"></i>
+      </p>
+      <p class="percentage-font">
+        <span
+          >Video Analysis:
+          {{OIVC|round(2)}}%</span
+        >
+        <span
+          >Text Analysis:
+          {{OITC|round(2)}}%</span
+        >
+      </p>
+    </div>
+  </div>
+</div>
+
+    <div class="col-md-6 stretch-card grid-margin">
+      <div class="card bg-gradient-danger card-img-holder text-white">
+        <i
+        class="fa fa-info-circle icon-css"
+        aria-hidden="true"
+        title="Check Graph"
+        data-bs-toggle="modal"
+        data-bs-target="#nervousnessLevel"
+        style="position: absolute; top: 0; right: 0; margin: 10px;z-index:999"
+      ></i>
+        <div class="card-body">
+          <img
+            src="{{ url_for('static', filename='assets/images/dashboard/circle.svg') }}"
+            class="card-img-absolute"
+            alt="circle-image"
+          />
+
+          <!-- Overall Interviewer Video Nervousness -->
+          {% set OIVN = overall.overall_interviewer_confidence['NS'] %}
+          <!-- Overall Interviewer Text Nervousness -->
+          {% set OITN = overall.overall_interviewer_confidence_text['NS'] %}          
+          
+          <p class="font-weight-normal mb-3 box-p-tag">
+            Nervousness Score (NS) - <small>{{ ((OIVN + OITN) / 2) | round(2) }}%</small>
+            <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
+          </p>
+          <p class="percentage-font">
+            <span
+              >Video Analysis:
+              {{overall.overall_interviewer_confidence['NS']|round(2)}}%</span
+            >
+            <span
+              >Text Analysis:
+              {{overall.overall_interviewer_confidence_text['NS']|round(2)}}%</span
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row mb-4">
+    <div class="report-container">
+      <h3 class="report-title">Candidate's Score</h3>
+      <i
+        class="fa fa-info-circle icon-css"
+        aria-hidden="true"
+        title="Check Graph"
+        data-bs-toggle="modal"
+        data-bs-target="#graphmodal"
+        data-video-report="{{candidate.overall_candidate_video_report}}"
+        data-text-report="{{candidate.overall_candidate_text_report}}"
+        data-audio-report="{{candidate.overall_candidate_audio_report}}"
+      ></i>
+    </div>
+    <!-- <div class="col-md-4 stretch-card grid-margin">
+      <div class="card bg-gradient-info card-img-holder text-white">
+        <div class="card-body">
+          <img
+            src="{{ url_for('static', filename='assets/images/dashboard/circle.svg') }}"
+            class="card-img-absolute"
+            alt="circle-image"
+          />
+          <p class="font-weight-normal mb-3 box-p-tag">
+            Confidence Score (CS)
+            <i class="mdi mdi-chart-line mdi-24px float-right"></i>
+          </p>
+          <p class="percentage-font">
+            {{overall.overall_candidate_confidence['CS']|round(2)}}%
+          </p>
+        </div>
+      </div>
+    </div> -->
+
+    <div class="col-md-6 stretch-card grid-margin">
       <div class="card bg-gradient-success card-img-holder text-white">
         <div class="card-body">
           <img
@@ -124,18 +203,49 @@ Interview Assessment {% endblock %} {% block head_styles %}
           <p class="percentage-font">
             <span
               >Video Analysis:
-              {{OCVC|round(2)}}%</span
+              {{OIVC|round(2)}}%</span
             >
             <span
               >Text Analysis:
-              {{OCTC|round(2)}}%</span
+              {{OITC|round(2)}}%</span
             >
           </p>
         </div>
       </div>
     </div>
+    <div class="col-md-6 stretch-card grid-margin">
+      <div class="card bg-gradient-danger card-img-holder text-white">
+        <div class="card-body">
+          <img
+            src="{{ url_for('static', filename='assets/images/dashboard/circle.svg') }}"
+            class="card-img-absolute"
+            alt="circle-image"
+          />
 
+          <!-- Overall Candidate Video Nervousness -->
+          {% set OCVN = overall.overall_candidate_confidence['NS'] %}
+          <!-- Overall Candidate Text Nervousness -->
+          {% set OCTN = overall.overall_candidate_confidence_text['NS'] %}
+
+          <p class="font-weight-normal mb-3 box-p-tag">
+            Nervousness Score (NS) - <small>{{ ((OCVN + OCTN) / 2) | round(2) }}%</small>
+            <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
+          </p>
+          <p class="percentage-font">
+            <span
+              >Video Analysis:
+              {{OCVN|round(2)}}%</span
+            >
+            <span
+              >Text Analysis:
+              {{OCTN|round(2)}}%</span
+            >
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
+
   <div class="row">
     <div class="col-xl-12">
       <div class="card">
