icon changes and reload after analyze

--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -272,7 +272,7 @@
         if (response) {
           var res = JSON.parse(response);
           if (res.success) {
-            location.reload()
+            location.reload(true)
             $(".loader_wrapper").addClass("d-none");
             reload_candidate_list();
             
